--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=1">
     <link rel="stylesheet" href="css/style.css">
-    <title>鸡乐盒 Plus</title>
+    <title>鸡乐盒</title>
     <style>
         * {
             margin: 0;
@@ -35,7 +35,7 @@
 <body>
     <div id="main">
         <div class="top">
-            <div class="name">鸡乐盒 Plus</div>
+            <div class="name">鸡乐盒</div>
             <div class="bg1"></div>
             <div class="bg2"></div>
             <div class="ji "></div>
@@ -43,7 +43,7 @@
         <div class="ctrl ">
             <div class="gongneng"><span>音效区域</span>
                 <div class="s">
-                    <div class="s1">开头</div>
+                    <div class="s1">开始</div>
                     <div class="s2">停止</div>
                 </div>
             </div>
@@ -114,9 +114,7 @@
             <div class="help">
             <div class="title">使用帮助</div>
                 <ul>
-                    <li>音频来自网络，未经原作者授权请勿商用。</li>
-                    <li>代码已在Github开源，<a href="https://github.com/lyryblog/ikun-home">点我跳转</a></li>
-                    <li>点击按钮就会发出只因声。</li>
+                    <li>点击按钮就会发出只因声</li>
                     <li>喜欢的话可以分享给身边的ikun！</li>
                 </ul>
             </div>
